--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,11 +1,5 @@
 {
   "buildCommand": "echo 'Frontend ready'",
   "outputDirectory": ".",
-  "framework": "other",
-  "env": [
-    {
-      "key": "BACKEND_URL",
-      "value": "your-railway-backend-url.up.railway.app"
-    }
-  ]
+  "framework": "other"
 }
