Clear sensitive keys from .env.example
Removed sensitive Google and GROQ API keys from example file.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,7 +4,7 @@
 # (DO NOT commit this file to GitHub!)
 
 FLASK_SECRET_KEY=your_super_secret_key_12345678901234567890
-GOOGLE_CLIENT_ID=24191536666-vsf97buq1glirsnb5to10k2hm87ibv63.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=https://your-railway-domain.up.railway.app/auth/google/callback
-GROQ_API_KEY=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
+GROQ_API_KEY=
