--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,31 @@
-# Example Environment Variables for Railway
+# Example Environment Variables for Deployment (Render/Railway)
 
-# Copy all these to Railway's Variables section
+# Copy all these to your hosting provider's Environment Variables section
 # (DO NOT commit this file to GitHub!)
 
+# Security
 FLASK_SECRET_KEY=your_super_secret_key_12345678901234567890
+
+# Google OAuth (Required for Login)
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=https://your-railway-domain.up.railway.app/auth/google/callback
+# For Render, this will be https://your-app-name.onrender.com/auth/google/callback
+GOOGLE_REDIRECT_URI=http://localhost:5000/auth/google/callback
+
+# AI Providers (At least one required)
 GROQ_API_KEY=
+GEMINI_API_KEY=
+DEEPSEEK_API_KEY=
+
+# Storage Configuration
+# Set to 'true' to let users save files to their own Drive
+DRIVE_USER_MODE=false
+# If DRIVE_USER_MODE=false, you need a developer refresh token or service account
+GOOGLE_DEVELOPER_REFRESH_TOKEN=
+
+# Admin
+ADMIN_EMAIL=your_email@example.com
+
+# Frontend URL (for CORS)
+FRONTEND_URL=https://your-frontend.vercel.app
+
