Update frontend URL for CORS configuration
Changed the FRONTEND_URL in .env.example and updated the default and allowed origins in app.py to use https://studyai-ajay.vercel.app for CORS. This ensures the backend accepts requests from the correct frontend deployment.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,5 +27,5 @@ GOOGLE_DEVELOPER_REFRESH_TOKEN=
 ADMIN_EMAIL=your_email@example.com
 
 # Frontend URL (for CORS)
-FRONTEND_URL=https://your-frontend.vercel.app
+FRONTEND_URL=https://studyai-ajay.vercel.app
 
