Update .env handling and error management in backend
Add backend/.env to .dockerignore to prevent it from being included in Docker builds. Change dotenv loading to not override existing environment variables. Modify database initialization error handling to log errors without raising exceptions, allowing the app to start for easier debugging.

--- a/.dockerignore
+++ b/.dockerignore
@@ -34,6 +34,7 @@ backend/venv/
 backend/backend-env/
 backend/__pycache__/
 backend/instance/
+backend/.env
 credentials.json
 token.json
 client_secret.json
